--- a/react-routing-app/package.json
+++ b/react-routing-app/package.json
@@ -7,6 +7,7 @@
     "history": "^4.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-particles-js": "^2.1.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17"
   },
