--- a/react-routing-app/package.json
+++ b/react-routing-app/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "axios": "^0.17.1",
     "history": "^4.7.2",
+    "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-particles-js": "^2.1.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17"
   },
