--- a/react-routing-app/package.json
+++ b/react-routing-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.0.0",
     "axios": "^0.17.1",
     "history": "^4.7.2",
     "material-ui": "^0.20.0",
